# mpac-protocol

./: .gitignore  LICENSE  MPAC_Developer_Reference.md  README.md  SPEC.md  local_config.example.json
blog/: introducing-mpac.md
examples/two_machine_demo/: README.md
mpac-package/: README.md  pyproject.toml
mpac-package/src/mpac_protocol/: __init__.py  agent.py  server.py
mpac-package/src/mpac_protocol/analysis/: __init__.py  import_index.py
mpac-package/src/mpac_protocol/core/: __init__.py  coordinator.py  models.py  participant.py  scope.py  state_machines.py  watermark.py
mpac-package/tests/: test_authenticated_profile.py  test_dependency_breakage.py  test_intent_claim.py  test_intent_deferred.py  test_intent_semantics.py  test_self_conflict_supersede.py
ref-impl/demo/: README.md  ai_agent.py  ai_demo_transcript.json  consume_ts_messages.py  generate_messages_py.py  process_messages_ts.mjs  run_ai_agents.py  run_interop.sh
ref-impl/python/: README.md  pyproject.toml
ref-impl/python/mpac/: __init__.py  envelope.py  models.py  scope.py
ref-impl/python/tests/: __init__.py  test_auto_dismiss.py  test_conflict.py  test_conflict_workflow.py  test_happy_path.py  test_intent_expiry.py  test_intent_update_claim.py  test_liveness.py  test_v0110_features.py  test_v0112_enforcement.py  test_v0113_backend_health.py  test_v015_features.py  test_v016_features.py
ref-impl/schema/: envelope.schema.json
ref-impl/typescript/: package-lock.json  package.json  tsconfig.json
version_history/: CHANGELOG.md
version_history/v0.1.10_execution_governance_closure/: MPAC_v0.1.10_Spec_Changeset.md  MPAC_v0.1.10_Update_Record.md  SPEC_v0.1.10_2026-04-04.md
version_history/v0.1.11_example_and_schema_alignment/: MPAC_v0.1.11_Spec_Changeset.md  MPAC_v0.1.11_Update_Record.md  SPEC_v0.1.11_2026-04-04.md
version_history/v0.1.12_conformance_closure/: MPAC_v0.1.12_Distributed_Validation.md  MPAC_v0.1.12_Family_Trip_Use_Case.md  MPAC_v0.1.12_Family_Trip_Validation.md  MPAC_v0.1.12_Update_Record.md  SPEC_v0.1.12_2026-04-05.md
version_history/v0.1.13_backend_health_monitoring/: MPAC_v0.1.13_Update_Record.md
version_history/v0.1.14_intent_deferred/: MPAC_v0.1.14_Update_Record.md  SPEC_v0.1.14_2026-04-28.md
version_history/v0.1.15_race_lock/: MPAC_v0.1.15_Update_Record.md  SPEC_v0.1.15_2026-04-29.md
version_history/v0.1.1_trust_governance_recovery/: MPAC Critique Closure Note 2026-03-31.docx  MPAC Specification Update Record 2026-03-31.docx  SPEC_v0.1.1_2026-03-31.md
version_history/v0.1.2_semantic_interop/: MPAC Specification Update Record 2026-03-31 (Semantic Interoperability).docx  SPEC_v0.1.2_2026-04-01.md
version_history/v0.1.3_interop_hardening/: MPAC_Independent_Review_2026-04-01.md  MPAC_Re-evaluation_v0.1.3_2026-04-01.md  MPAC_v0.1.3_Audit_Report.md  MPAC_v0.1.3_Update_Record.md  SPEC_v0.1.3_2026-04-02.md
(+89 files in other folders)
