[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpac-protocol"
version = "0.1.0"
description = "MPAC (Multi-Principal Agent Coordination Protocol) — coordinate multiple AI agents on shared tasks"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "websockets>=12.0",
    "anthropic>=0.40.0",
]

[tool.setuptools.packages.find]
where = ["src"]
