[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpac"
version = "0.2.5"
description = "MPAC (Multi-Principal Agent Coordination Protocol) — coordinate multiple AI agents serving different principals over shared state"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    {name = "Kaiyang Qian", email = "kaiyang.2.qian@ucdenver.edu"},
]
keywords = [
    "mpac", "multi-agent", "agent-coordination", "ai-agents",
    "llm", "claude", "protocol", "coordination", "mcp", "a2a",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "websockets>=12.0",
    "anthropic>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/KaiyangQ/mpac-protocol"
Repository = "https://github.com/KaiyangQ/mpac-protocol"
Specification = "https://github.com/KaiyangQ/mpac-protocol/blob/main/SPEC.md"
"Two-machine demo" = "https://github.com/KaiyangQ/mpac-protocol/tree/main/examples/two_machine_demo"
Issues = "https://github.com/KaiyangQ/mpac-protocol/issues"

[tool.setuptools.packages.find]
where = ["src"]
